Fix sizing of row with header on small viewports and remove grid columns from main page

--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -12,17 +12,16 @@
   list-style-type: none;
 }
 
-/* Link Container */
-.navbar>ul>li {}
-
 /* Links (anchor tags) */
 .navbar>ul>li>a {
+  box-shadow: none;
+  font-size: 1.6rem;
+  letter-spacing: .2rem;
   text-decoration: none;
-  font-size: 1.4rem;
 }
 
 /* have sick animation for hovering */
-.navbar>ul>li>a>p:hover {
+.navbar>ul>li>a:hover {
   animation: textGradientHover .75s linear infinite;
   background: var(--zune-background-animate);
   /* inspired by https://codepen.io/P1N2O/pen/pyBNzX */
@@ -50,10 +49,6 @@
   0% {
     background-position: 0% 100%;
   }
-
-  /* 50% {
-    background-position: 100% 50%;
-  } */
 
   100% {
     background-position: 100% 0%;
